# shaderjoy

./: Cargo.toml  flake.nix
src/: main.rs  shader.wgsl
