[package]
name = "shaderjoy"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2021"

[dependencies]
winit = "0.29.10"
wgpu = "0.19.1"

bytemuck = { version = "1.14.1", features = ["derive"] }
pollster = { version = "0.3.0", features = [ "macro" ] }
env_logger = "0.11.1"
notify = "6.1.1"
